tests/Houtamelo.Spire.Analyzers.Tests/SPIRE001/cases/Detect_RecordStruct_ArrayResize.cs
//@ should_fail
// Ensure that SPIRE001 IS triggered when calling Array.Resize with a record struct.
public class Detect_RecordStruct_ArrayResize
{
    public void Method()
    {
        EnforceInitializationRecordStruct[]? arr = null;
        Array.Resize(ref arr, 5); //~ ERROR
    }
}
